php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22550 upload_max_filesize to large and uploads does not work
Submitted: 2003-03-05 08:07 UTC Modified: 2003-03-05 11:05 UTC
From: bf at ez dot no Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 4.3.0 OS: Redhat Linux 7.1
Private report: No CVE-ID: None
 [2003-03-05 08:07 UTC] bf at ez dot no
I changed php.ini to read:     
     
; Maximum allowed size for uploaded files.     
upload_max_filesize = 1000000000000000M     
     
I did this to "disable" the file size check.     
     
This breakes file uploads, you don't get successful    
uploads with this setting. No matter size of file.    
    
If you enter sensible values there is no problem.     
    
Still it should be added a small check if this number is    
to big and set it to max_int or whatever the limit is.    
 
--b?rd 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-03-05 11:05 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC