Fixed bug #22550 (overflow protection for upload_max_filesize ini setting).